syntax = "proto3";
package uagd.growth.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "uagd/x/growth/types";

// RegionMetric captures official economic indicators for a region and period.
message RegionMetric {
  string region_id = 1;
  string period = 2;
  // Index values are decimals in the range [0, 2].
  // NOTE: Cosmos SDK v0.53 uses cosmossdk.io/math.LegacyDec (sdk.Dec was removed).
  string tax_index = 3 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
  string gdp_index = 4 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
  string exports_index = 5 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
}

// GrowthScore stores derived multipliers for a region and period.
message GrowthScore {
  string region_id = 1;
  string period = 2;
  string score = 3 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
  string delegation_multiplier = 4 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
  string payroll_multiplier = 5 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
}

// Occupation stores the occupation percentage for a region and period.
message Occupation {
  string region_id = 1;
  string period = 2;
  string occupation = 3 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.nullable) = false];
}

// Params defines module parameters.
message Params {
  string current_period = 1;
  string oracle = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string national_region_id = 3;
}

// GenesisState defines the growth module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated RegionMetric metrics = 2 [(gogoproto.nullable) = false];
  repeated GrowthScore scores = 3 [(gogoproto.nullable) = false];
  repeated Occupation occupation_list = 4 [(gogoproto.nullable) = false];
}
